[workspace]
members = ["crates/*"]

[workspace.package]
rust-version = "1.66"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["chaiNNer team"]

[workspace.dependencies]
glam = { version = "0.24.0" }
image = { version = "0.24.5" }
criterion = { version = "0.5.1" }
regex = "1.8.4"

# local crates
bindings = { path = "./crates/bindings", version = "0.0.0" }
image-core = { path = "./crates/image-core", version = "0.0.0" }
image-ops = { path = "./crates/image-ops", version = "0.0.0" }
regex-py = { path = "./crates/regex-py", version = "0.0.0" }
test-util = { path = "./crates/test-util", version = "0.0.0" }
