[package]
name = "bindings"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "chainner_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module"] }
numpy = "0.18"

glam.workspace = true
image-ops.workspace = true
image-core.workspace = true
