[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "chainner_ext"
version = "0.1.0"
description = "Rust implementation of functionality used in chaiNNer"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
    # https://github.com/PyO3/rust-numpy
    "numpy>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/chaiNNer-org/chaiNNer-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
