[package]
name = "image-ops"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
glam.workspace = true
image-core.workspace = true

[dev-dependencies]
test-util.workspace = true
criterion.workspace = true

[[bench]]
name = "my_benchmark"
harness = false
