[package]
name = "image-ops"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
zhang_hilbert = "0.1.1"
glam.workspace = true
rstar.workspace = true
ahash.workspace = true
image-core.workspace = true

[dev-dependencies]
test-util.workspace = true
criterion.workspace = true

[[bench]]
name = "my_benchmark"
harness = false
