[package]
name = "image-ops"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
zhang_hilbert = "0.1.1"
rstar = "0.11.0"
ahash = "0.8.3"
resize = "0.8.3"
rayon = "1.8.0"
glam.workspace = true
image-core.workspace = true

[dev-dependencies]
test-util.workspace = true
criterion.workspace = true

[[bench]]
name = "my_benchmark"
harness = false
